# data_server

./: .gitignore  README.md  README2.md
data_client/: CMakeLists.txt  README.md  conanfile.txt
data_client/src/: data_client.cpp
data_server/: .clang-format  CMakeLists.txt  configuration.txt
data_server/src/: configuration.hpp  connection.hpp  properties.hpp  server.hpp
src/: configuration.cpp  data.hpp  log.hpp  main.cpp
